--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![license badge](https://img.shields.io/badge/license-MIT-brightgreen)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/SMKrizan/zookeepr#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
